# vapusai-studio

./: .gitignore  .golangci.yaml  .goreleaser.yaml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  setup.mk
.github/workflows/: aistudio_svc_workflows.yaml  build_helmchart_workflows.yaml  cosign.pub  dataworker_workflows.yaml  monorelease.yaml  nabhikserver_workflows.yaml  platform_svc_workflows.yaml  proto-lint.yaml  release_helmchart_workflows.yaml  vapusctl_workflows.yaml  vdc_workflows.yaml  webapp_workflows.yaml
apis/: Makefile  buf.gen.yaml  buf.yaml
apis/api-spec/: apidocs.openapiv3.json
app/src/aitools/: Dockerfile  Dockerfile_windows  Makefile  aitools.spec  bandit.toml  pylint.rc  pyproject.toml  readme.md  server.py  server.spec  test.py
app/src/aitools/controller/: vapusmlutilities.py
app/src/aitools/database/: connector.py
app/src/aitools/helpers/: config.py  jwtvalidate.py  settings.py  templates.py
app/src/aitools/interceptors/: interceptor.py
app/src/aitools/models/: aiutility_models.py
app/src/aitools/server/: grpc.py
app/src/aitools/services/: utilities.py
app/src/mlutilities/: pyproject.toml  readme.md  server.py  test.py
app/src/mlutilities/controller/: vapusmlutilities.py
app/src/mlutilities/helpers/: errors.py  logger.py
app/src/mlutilities/interceptors/: interceptor.py
app/src/mlutilities/middlewares/: jwtvalidate.py
app/src/mlutilities/server/: grpc.py
app/src/mlutilities/utils/: file_loader.py  importer.py
deployments/: Makefile  self-runner.txt  setup.txt
internals/: Makefile  go.mod  go.sum
(+504 files in other folders)
