[tool.poetry]
name = "aitools"
version = "0.1.0"
description = ""
authors = ["Vikrant Singh <vikrant@vapusdata.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = "^2.10.5"
loguru = "^0.7.3"
presidio-analyzer = "^2.2.357"
presidio-anonymizer = "^2.2.357"
grpcio = "^1.69.0"
grpcio-tools = "^1.69.0"
pylint = "^3.3.3"
sentence-transformers = "^3.3.1"
pyyaml = "^6.0.2"
grpc-interceptor = "^0.15.4"
bandit = "^1.8.2"
pyjwt = "^2.10.1"
pydantic-settings = "^2.7.1"
python-dotenv = "^1.0.1"



[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"